# webshooter

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.debian  LICENSE  MANIFEST.in  README.md  package.json  pyproject.toml  requirements.txt  rollup.config.js  setup.py  webshooter.py
auth/: basic.py
cli/: __init__.py  app.py
js/: screen.js  script.py
report/: card_template.html  generate.py  index_template.html  page_template.html  style.css  template.py
report/templates/: card.html  image_modal.html  main.html  page.html  pagination.html
screen/: capture.py  capture_service.js  package.json  session.py  shoot.py
src/webshooter/report/: generate.py  web.js
src/webshooter/report/templates/: card.html  page.html
src/webshooter/screen/: __init__.py  capture_service.js  package.json  session.py
targets/: nmap.py  urls.py
urls/: nmap.py
webshooter/cli/: app.py
webshooter/report/: __init__.py  generate.py
webshooter/report/templates/: index.html
webshooter/screen/: capture.py  capture_service.js  package.json  shoot.py
webshooter/targets/: __init__.py  nessus.py  urls.py
