[project]
name = "webshooter"
version = "0.1.0"
authors = [{ name="UserExistsError" }]
description = "Capture screenshots of web sites"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "Jinja2 >=2, <4"
]

[project.urls]
"Homepage" = "https://github.com/UserExistsError/webshooter"

[project.scripts]
webshooter = "webshooter.cli:run"

[build-system]
requires = [ "setuptools >= 58.0" ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [ "webshooter" ]
